tests/test_proof/bad/structs-overlap.catala_en
## Test

```catala
declaration structure T:
   data c content boolean
   data d content integer

declaration structure S:
    data a content integer
    data b content T

declaration scope A:
  context x content integer
  context y content S

scope A:
  definition y equals S { -- a : 0 -- b : T { -- c : false -- d: 0}}
  definition x under condition (y.a = 0) or y.b.c consequence equals 0
  definition x under condition not (y.a = 0) or not (y.b.c) consequence equals 1
```
